--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <steamworks4j-server.version>1.8.0</steamworks4j-server.version>
         <joml.version>1.9.19</joml.version>
         <lwjgl.natives>natives-windows</lwjgl.natives>
+        <maven.compiler.release>12</maven.compiler.release>
     </properties>
 
     <dependencyManagement>
@@ -139,5 +140,4 @@
             <version>${joml.version}</version>
         </dependency>
     </dependencies>
-
 </project>
