--- a/pom.xml
+++ b/pom.xml
@@ -12,17 +12,17 @@
         <lwjgl.version>3.3.0</lwjgl.version>
         <steamworks4j.version>1.8.0</steamworks4j.version>
         <steamworks4j-server.version>1.8.0</steamworks4j-server.version>
-        <joml.version>1.10.3</joml.version>
+        <joml.version>1.10.4</joml.version>
         <lwjgl.natives>natives-windows</lwjgl.natives>
-        <maven.compiler.release>17</maven.compiler.release>
-        <maven.source.target>17</maven.source.target>
+        <maven.compiler.release>18</maven.compiler.release>
+        <maven.source.target>18</maven.source.target>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.2</version>
+            <version>5.9.0-M1</version>
         </dependency>
 
         <dependency>
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.17.1</version>
+            <version>2.17.2</version>
         </dependency>
     </dependencies>
 </project>
