Updated this project

--- a/pom.xml
+++ b/pom.xml
@@ -1,25 +1,40 @@
 <properties>
-    <lwjgl.version>3.3.3</lwjgl.version>
-    <joml.version>1.10.5</joml.version>
-    <steamworks4j.version>1.9.0</steamworks4j.version>
-    <lwjgl.natives>natives-windows</lwjgl.natives>
+	<lwjgl.version>3.3.3</lwjgl.version>
+	<joml.version>1.10.5</joml.version>
+	<steamworks4j.version>1.9.0</steamworks4j.version>
+	<lwjgl.natives>natives-windows</lwjgl.natives>
 </properties>
 
 <dependencyManagement>
-<dependencies>
-    <dependency>
-        <groupId>org.lwjgl</groupId>
-        <artifactId>lwjgl-bom</artifactId>
-        <version>${lwjgl.version}</version>
-        <scope>import</scope>
-        <type>pom</type>
-    </dependency>
-</dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>org.lwjgl</groupId>
+			<artifactId>lwjgl-bom</artifactId>
+			<version>${lwjgl.version}</version>
+			<scope>import</scope>
+			<type>pom</type>
+		</dependency>
+	</dependencies>
 </dependencyManagement>
 
 <dependencies>
-<dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl</artifactId></dependency>
-<dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl</artifactId><classifier>${lwjgl.natives}</classifier></dependency>
-<dependency><groupId>org.joml</groupId><artifactId>joml</artifactId><version>${joml.version}</version></dependency>
-<dependency><groupId>com.code-disaster.steamworks4j</groupId><artifactId>steamworks4j</artifactId><version>${steamworks4j.version}</version></dependency>
+	<dependency>
+        <groupId>org.lwjgl</groupId>
+        <artifactId>lwjgl</artifactId>
+    </dependency>
+	<dependency>
+        <groupId>org.lwjgl</groupId>
+        <artifactId>lwjgl</artifactId>
+        <classifier>${lwjgl.natives}</classifier>
+    </dependency>
+		<dependency>
+            <groupId>org.joml</groupId>
+            <artifactId>joml</artifactId>
+            <version>${joml.version}</version>
+        </dependency>
+		<dependency>
+            <groupId>com.code-disaster.steamworks4j</groupId>
+            <artifactId>steamworks4j</artifactId>
+            <version>${steamworks4j.version}</version>
+        </dependency>
 </dependencies>
