--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,7 @@
 	<lwjgl.natives>natives-windows</lwjgl.natives>
 </properties>
 
-<dependencyManagement>
-	<dependencies>
+<dependencies>
 		<dependency>
 			<groupId>org.lwjgl</groupId>
 			<artifactId>lwjgl-bom</artifactId>
@@ -15,26 +14,10 @@
 			<type>pom</type>
 		</dependency>
 	</dependencies>
-</dependencyManagement>
 
 <dependencies>
-	<dependency>
-        <groupId>org.lwjgl</groupId>
-        <artifactId>lwjgl</artifactId>
-    </dependency>
-	<dependency>
-        <groupId>org.lwjgl</groupId>
-        <artifactId>lwjgl</artifactId>
-        <classifier>${lwjgl.natives}</classifier>
-    </dependency>
-		<dependency>
-            <groupId>org.joml</groupId>
-            <artifactId>joml</artifactId>
-            <version>${joml.version}</version>
-        </dependency>
-		<dependency>
-            <groupId>com.code-disaster.steamworks4j</groupId>
-            <artifactId>steamworks4j</artifactId>
-            <version>${steamworks4j.version}</version>
-        </dependency>
+	<dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl</artifactId></dependency>
+	<dependency><groupId>org.lwjgl</groupId><artifactId>lwjgl</artifactId><classifier>${lwjgl.natives}</classifier></dependency>
+		<dependency><groupId>org.joml</groupId><artifactId>joml</artifactId><version>${joml.version}</version></dependency>
+		<dependency><groupId>com.code-disaster.steamworks4j</groupId><artifactId>steamworks4j</artifactId><version>${steamworks4j.version}</version></dependency>
 </dependencies>
